--- a/frontend-assignment/src/app/data-table/data-table.component.html
+++ b/frontend-assignment/src/app/data-table/data-table.component.html
@@ -68,10 +68,10 @@
               <ng-container matColumnDef="action">
                   <th mat-header-cell *matHeaderCellDef> Actions </th>
                   <td mat-cell *matCellDef="let element"> 
-                      <mat-icon class="common-grey-color">mail</mat-icon>
-                      <mat-icon class="common-grey-color">share</mat-icon>
-                      <mat-icon class="common-grey-color">edit</mat-icon>
-                      <mat-icon class="common-grey-color">delete</mat-icon>
+                      <mat-icon class="common-action">mail</mat-icon>
+                      <mat-icon class="common-action">share</mat-icon>
+                      <mat-icon class="common-action">edit</mat-icon>
+                      <mat-icon class="common-action">delete</mat-icon>
                   </td>
                 </ng-container>
             
